Removing password from the README

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>A whale Greeeting</title>
+        <title>A whale Greeting</title>
     </head>
     <body>
         <h1>hello, world</h1>
